[tool.poetry]
name = "cosmostation-fet-tx-scraper"
version = "0.1.0"
description = ""
authors = ["Abbas Khan <78728539+abbas-khan8@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
beautifulsoup4 = "^4.10.0"
lxml = "^4.8.0"
html5lib = "^1.1"
requests-html = "^0.10.0"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
