[tool.poetry]
name = "cosmostation-fet-tx-scraper"
version = "0.1.0"
description = ""
authors = ["Abbas Khan <78728539+abbas-khan8@users.noreply.github.com>"]
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
app = "main:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
selenium = "^4.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
