[tool.poetry]
name = "fetch_tx_extractor"
version = "0.1.0"
description = ""
authors = ["Abbas Khan <78728539+abbas-khan8@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.scripts]
app = "src.main:main"

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.27.1"
selenium = "^4.1.2"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^5.2"
freezegun = "^1.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
